--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -17,7 +17,7 @@
   <%@product.variants.each do |var|%>
   <div class="product-variants-variant-title text-center text-md-left" id="<%=var.id%>">
   <%var.prices_range(@role_id).each do |price|%>
-  <span class="other_price" data-id="<%=var.id%>"><%= number_to_currency(price, unit: "₴", separator: ".", delimiter: "") %></span>
+  <span class="other_price" data-id="<%=var.id%>"><%= number_to_currency(price, unit: "грн.", separator: ".", delimiter: "") %></span>
   <%end%>
   </div>
   <%end%>
@@ -25,7 +25,7 @@
     <%# if is_product_available_in_currency %>
       <div id="product-price" class="mb-2 text-center text-md-left add-to-cart-form-price" data-hook="product_price">
         <span class="price selling" content="<%= @product_price.to_d %>">
-          <%= number_to_currency(@product_price, unit: "₴", separator: ".", delimiter: "") %>
+          <%= number_to_currency(@product_price, unit: "грн.", separator: ".", delimiter: "") %>
           </span>
         <span content="<%= current_currency %>"></span>
       </div>
