--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -53,9 +53,9 @@
       <div class="row justify-content-center logo_head">
           <div>
             <figure class="logo flex-grow-0 flex-xl-grow-1 order-xl-0 header-spree-fluid-logo m-0 float">
-              <%= logo %>
+              <%= link_to logo, root_path %>
             </figure>
-            <span class="padding_top"><span class="zn_title"><span class="second"><%=Spree.t('homepage.znak')%></span></span></span>
+            <span class="padding_top"><span class="zn_title"><span class="second"><%= link_to Spree.t('homepage.znak'), root_path, class:"dis_link"%></span></span></span>
           </div>
         </div>
 
@@ -80,9 +80,9 @@
       <div class="logo_second">
         <div class="center_second">
           <figure class="logo flex-grow-0 flex-xl-grow-1 order-xl-0 header-spree-fluid-logo m-0 float">
-            <%= logo %>
+            <%= link_to logo, root_path %>
           </figure>
-          <div class="log_small"><%=Spree.t('homepage.znak')%></div>
+          <div class="log_small"><%= link_to Spree.t('homepage.znak'), root_path, class:"dis_link"%></div>
         </div>
       </div>
         <div id="main-nav-bar" class=" flex-grow-0 display h-100 header-spree-fluid-primary-navigation">
