--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -12,8 +12,9 @@
 
   <ul class="navbar-nav">
   <li class="nav-item dropdown">
-      <span class=" white padding_main main-nav-bar-item" data-toggle="dropdown" id="catalog" >
-        <%= Spree.t('homepage.shop_now')%></span>
+      <span>
+        <%= link_to Spree.t('homepage.shop_now'), spree.products_path, class: "white padding_main main-nav-bar-item dis_link", data_toggle:"dropdown", id:"catalog"%>
+      </span>
       <ul class="dropdown-menu catalog_inside">
         <% spree_navigation_data.each do |root| %>
   	  <li><%= link_to root[:title], spree.nested_taxons_path(root[:url]),class:"dropdown-item  main_nav list_catalog" %>
