--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -50,6 +50,6 @@
     <% end %>
 
 
-  <%= products_structured_data([@product], @role_id) %>
+  <%#= products_structured_data([@product], @role_id) %>
 
   <%= render 'spree/shared/product_added_modal' %>
