tels, znachku, home

--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -17,7 +17,7 @@
       <div class="carousel-item active">
 
           <%= image_tag('homepage/car1.png', class: "d-block w-100 im") %>
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-none d-md-block car-caption">
 <%#         <div class="col-6"><%= link_to Spree.t('homepage.shop_now'), spree.products_path, class: 'btn btn_catalog spree-btn px-5' </div> %>
 <%#         <p></p> %>
 
@@ -27,7 +27,7 @@
       </div>
       <div class="carousel-item">
         <%= image_tag('homepage/car2.png', class: "d-block w-100 im") %>
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-none d-md-block car-caption">
 <%#          <div class="col-6"><%= link_to Spree.t('homepage.shop_now'), spree.products_path, class: 'btn btn_catalog spree-btn px-5' </div>%>
           <%#<p></p> %>
           <h1><%= Spree.t("homepage.main_title_first") %></h1>
