--- a/app/assets/stylesheets/spree/frontend/views/spree/shared/_header.scss
+++ b/app/assets/stylesheets/spree/frontend/views/spree/shared/_header.scss
@@ -1,3 +1,10 @@
+.breadcrumb li a{
+  font-size: 1.3rem;
+}
+.breadcrumb li {
+  font-size: 1.3rem !important;
+}
+
 .header-spree {
   background: #00336E;
 }
@@ -58,25 +65,28 @@
 }
 .index_car_pointer{
   position: absolute;
-  width: 80% ;
-  margin-right: 10%;
-  margin-top: 2%;
+  width: 85%;
+  /* margin-right: 10%; */
+  padding-top: 26%;
   top: auto;
-    bottom: auto;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    text-align: center;
-    opacity: 0.5;
-    transition: opacity 0.15s ease;
+  bottom: auto;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  opacity: 0.4;
+  transition: opacity 0.15s ease;
 }
 .right{
   right: 0;
 }
 .index_car {
   background: transparent !important;
-  border: 3px solid white;
+  border: 2.5px solid white;
+}
+.car-caption{
+  bottom: 15% !important;
 }
 #search-drop{
   overflow-x: hidden;
