--- a/app/assets/stylesheets/spree/frontend/views/spree/posts/show.scss
+++ b/app/assets/stylesheets/spree/frontend/views/spree/posts/show.scss
@@ -1,3 +1,13 @@
+.post_border {
+  border-bottom: 0.16rem solid #00336E;
+  border-left: 0.2rem solid #00336E;
+  border-image:
+    linear-gradient(
+      to bottom,
+      #00336E,
+      rgba(0, 0, 0, 0.1)
+    ) 1 1 30%;
+}
 .space{
   padding-top: 2rem;
   padding-bottom: 2rem;
