--- a/app/views/spree/posts/index.html.erb
+++ b/app/views/spree/posts/index.html.erb
@@ -1,7 +1,7 @@
 <% cache cache_posts(@posts) do %>
 <div class="container space">
 <%@posts.each do |post|%>
-<div class="text-center">
+<div class="text-center post_border">
   <h5 class="text-center"><%= post.title%></h5>
   <div><%= raw(truncate(post.body.gsub(/<img[^>]+\/>/, ""), length: 500, escape: false))%></div>
     <p><%= link_to Spree.t("read"), spree.post_path(post.id)%></p>
