--- a/app/assets/stylesheets/spree/frontend/views/spree/posts/show.scss
+++ b/app/assets/stylesheets/spree/frontend/views/spree/posts/show.scss
@@ -1,4 +1,5 @@
 .post_border {
+  padding-left: 1rem;
   border-bottom: 0.16rem solid #00336E;
   border-left: 0.2rem solid #00336E;
   border-image:
