--- a/app/assets/stylesheets/spree/frontend/views/spree/posts/show.scss
+++ b/app/assets/stylesheets/spree/frontend/views/spree/posts/show.scss
@@ -9,6 +9,14 @@
       rgba(0, 0, 0, 0.1)
     ) 1 1 30%;
 }
+.post_header {
+  color: white;
+  background: linear-gradient(
+    to bottom,
+    #00336E,
+    rgba(0, 0, 0, 0.1)
+  );
+}
 .space{
   padding-top: 2rem;
   padding-bottom: 2rem;
