--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -83,4 +83,23 @@
       <%end%>
     </div>
   </div>
+
+  <div class="row">
+  <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+    <div class="homepage-taxon mb-3">
+      <div class="card card_index" >
+        <%if !last_taxon.last.icon.nil?%>
+        <%= image_tag(main_app.url_for(last_taxon.icon.try(:attachment)),class: "d-block w-100 im default_choose img_from_blob") %>
+        <%elsif File.exist?("app/assets/images/homepage/#{last_taxon.name}.png")%>
+      <%= image_tag("homepage/#{last_taxon.name}.png", class: "d-block w-100 img_from_blob") %>
+      <%else%>
+      <%=image_tag("no_img.png", class: "d-block w-100  default_choose img_from_blob")%>
+      <%end%>
+      <div class="card-body">
+        <button class="btn btn-block spree-btn index_btn"><%= Spree.t(last_taxon.name)%></button>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
 </div>
