--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -45,9 +45,9 @@
             <br>
             <span class="address_info"><%= Spree::Config.second_mob%></span>
             <br>
-            <span class="address_info"><%= Spree::Config.viber%></span>
+            <span class="address_info"><%= Spree::Config.viber%>&nbsp;<%=image_tag "viberf.png"%></span>
             <br>
-            <span class="address_info"><%= Spree::Config.telegram%></span>
+            <span class="address_info"><%= Spree::Config.telegram%>&nbsp;<%=image_tag "telegf.png"%></span>
             <br>
             <span class="address_info"><%= Spree::Config.first_mob%></span>
             <br>
