--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -37,7 +37,6 @@
 </li>
 <li ><%= link_to Spree.t('homepage.news'), spree.posts_path, class: " padding_main main-nav-bar-item main_nav" %></li>
 
-
 <li>
 
     <nav class="navbar-expand-lg">
@@ -52,11 +51,6 @@
         <%=  link_to Spree.t('homepage.about_us'), spree.about_us_path, class: "white padding_main main-nav-bar-item dis_link", data_toggle:"dropdown", id:"catalog"%>
       </span>
       <ul class="dropdown-menu catalog_inside">
-
-  	  <li>
-        <%= link_to Spree.t('homepage.technical_support'), spree.technical_support_path,class:"dropdown-item  main_nav list_catalog" %>
-         </li>
-
          <li>
            <%= link_to Spree.t('homepage.contact'), spree.contact_us_path,class:"dropdown-item  main_nav list_catalog" %>
             </li>
@@ -69,5 +63,8 @@
   </nav>
 
  </li>
+ <li>
+   <%= link_to Spree.t('homepage.technical_support'), spree.technical_support_path,class:"padding_main main-nav-bar-item main_nav" %>
+    </li>
  </ul>
 <% end %>
