--- a/app/views/spree/admin/settings/change.html.erb
+++ b/app/views/spree/admin/settings/change.html.erb
@@ -48,5 +48,10 @@
   <span>Електронна скринька на яку приходять повідомлення про замовлення</span>
 <%=Spree::Config.email_admin%>
 </li>
+
+<li class="list-group-item">
+  <span>Заголовок під картинками на головній сторінці</span>
+<%=Spree::Config.title_for_footer%>
+</li>
 </ul>
 <%= link_to 'Повернутися', admin_settings_path %>
