--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -1,28 +1,67 @@
-<% cache spree_nav_cache_key('footer') do %>
-  <footer id="footer" class="pt-2 mx-auto border-top footer-spree" data-turbolinks-permanent>
+
+      <div id="carouselExampleControlsSecond" class="carousel slide" data-ride="carousel">
+        <h4 class="center_text_footer address_info"><%=Spree::Config.title_for_footer%></h4>
+        <div class="carousel-inner">
+
+        <span id="big_screen">
+         <%Spree::ImageFooter.all&.order(:number)&.each_slice(8)&.with_index do |image, index|%>
+       <div class="carousel-item <%= 'active' if index == 0 %>">
+         <%image.each do |im|%>
+         <ul style="display: inline-block;list-style-type: none;">
+         <li>
+         <%= image_tag(main_app.url_for(im.picture.variant(resize_to_limit: [150, 150])))%>
+       </li>
+       </ul>
+       <%end%>
+        </div>
+        <%end%>
+       </span>
+
+         <span id="ipad">
+        <%Spree::ImageFooter.all&.order(:number)&.each_slice(4)&.with_index do |image, index|%>
+       <div class="carousel-item <%= 'active' if index == 0 %>">
+         <%image.each do |im|%>
+         <ul style="display: inline-block;list-style-type: none;">
+         <li>
+         <%= image_tag(main_app.url_for(im.picture.variant(resize_to_limit: [150, 150])))%>
+       </li>
+       </ul>
+       <%end%>
+        </div>
+        <%end%>
+       </span>
+
+       <span id="mobile">
+         <%Spree::ImageFooter.all&.order(:number)&.each_slice(2)&.with_index do |image, index|%>
+       <div class="carousel-item <%= 'active' if index == 0 %>">
+         <%image.each do |im|%>
+         <ul style="display: inline-block;list-style-type: none;">
+         <li>
+         <%= image_tag(main_app.url_for(im.picture.variant(resize_to_limit: [150, 150])))%>
+       </li>
+       </ul>
+       <%end%>
+        </div>
+        <%end%>
+        </span>
+
+         </div>
+
+
+      <a class="carousel-control-prev" href="#carouselExampleControlsSecond" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControlsSecond" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <% cache spree_nav_cache_key('footer') do %>
+      <footer id="footer" class="pt-2 mx-auto border-top footer-spree" data-turbolinks-permanent>
+
     <div class="container">
-      <div class="row d-xl-flex py-5 text-uppercase footer-spree-menu-links ">
-        <div class="col-6">
-        <% spree_navigation_data.first(3).each do |root| %>
-            <div class="col-12">
-              <div class="footer-spree-label space_footer">
-                <%= link_to root[:title], spree.nested_taxons_path(root[:url]), class: "tax_footer" %>
-              </div>
-
-            </div>
-          <% end %>
-        </div>
-        <div class="col-6">
-        <% spree_navigation_data.last(3).each do |root| %>
-            <div class="col-12">
-              <div class="footer-spree-label space_footer">
-                <%= link_to root[:title], spree.nested_taxons_path(root[:url]), class: "tax_footer" %>
-              </div>
-
-            </div>
-          <% end %>
-        </div>
-      </div>
       <div class="row d-xl-flex py-5 text-uppercase footer-spree-menu-links ">
           <% if spree.respond_to?(:account_path) %>
             <div class="col-6 ">
