resize products image

--- a/app/views/spree/products/index.html.erb
+++ b/app/views/spree/products/index.html.erb
@@ -18,10 +18,8 @@
       <div id="no-taxon-banner">
         <div class="container">
           <%= image_tag(
-            'homepage/products.png',
+            'homepage/product.jpg',
             alt: 'products-banner',
-            width: 1110,
-            height: 300,
             class: 'w-100 d-none d-md-block im'
           ) %>
         </div>
