describe on products

--- a/app/assets/stylesheets/spree/frontend/contact.scss
+++ b/app/assets/stylesheets/spree/frontend/contact.scss
@@ -204,6 +204,11 @@ padding-left: 20%;
   }
 }
 &:hover{
+  .product_desc_hidden{
+    color:white;
+  }
+}
+&:hover{
   .money_product{
   color:white;
 }
