--- a/app/views/spree/shared/_product.html.erb
+++ b/app/views/spree/shared/_product.html.erb
@@ -2,27 +2,30 @@
 
 
 <div class="card card_index product_card" >
-  <%= link_to url, class: 'h-100 flex-column justify-content-between display_flex' do %>
+    <%= link_to url, class: 'h-100 flex-column justify-content-between display_flex' do %>
   <div class="default_choose  products_image">
-  <%= plp_and_carousel_image(product, image_class) %>
-</div>
-<%#cache product_cache(product,id) do %>
-<div class="card-body-prod name_product" title="<%= product.name %>">
-  <%= product.name %>
-</div>
-<div class="card-footer money_product">
-  <%if product.empty_price%>
-  <%=Spree.t(:empty_price)%>
-  <%else%>
-  <%if !product.price_for_index(role_id: id).nil?%>
-  <%product.price_for_index(role_id: id).each do |price|%>
-  <%= number_to_currency(price, unit: "грн.", separator: ".", delimiter: "", format: "%n %u") %>
-<%end%>
-<%else%>
-<%= number_to_currency(0.00, unit: "грн.", separator: ".", delimiter: "", format: "%n %u") %>
-<%end%>
-<%end%>
-</div>
-<%# end %>
+    <%= plp_and_carousel_image(product, image_class) %>
+  </div>
+  <%#cache product_cache(product,id) do %>
+  <div class="card-body-prod name_product" title="<%= product.name %>">
+    <%= product.name %>
+  </div>
+  <div class="card-footer money_product">
+    <%if product.empty_price%>
+    <%=Spree.t(:empty_price)%>
+    <%else%>
+    <%if !product.price_for_index(role_id: id).nil?%>
+    <%product.price_for_index(role_id: id).each do |price|%>
+    <%= number_to_currency(price, unit: "грн.", separator: ".", delimiter: "", format: "%n %u") %>
+    <%end%>
+    <%else%>
+    <%= number_to_currency(0.00, unit: "грн.", separator: ".", delimiter: "", format: "%n %u") %>
+    <%end%>
+    <%end%>
+  </div>
+  <div class="short_desc_index product_desc_hidden" style="display: none;">
+    <%=sanitize truncate(product.description, length: 200, escape: false)%>
+  </div>
+  <%# end %>
 </div>
 <%end %>
