--- a/app/views/spree/admin/shared/sub_menu/_configuration.html.erb
+++ b/app/views/spree/admin/shared/sub_menu/_configuration.html.erb
@@ -13,4 +13,5 @@
   <%= configurations_sidebar_menu_item("Про нас", admin_about_path(Spree::About.last.id)) if can? :manage, Spree::About%>
   <%= configurations_sidebar_menu_item("Техпідтримка", admin_technical_support_path(Spree::TechnicalSupport.last.id)) if can? :manage, Spree::TechnicalSupport%>
   <%= configurations_sidebar_menu_item("Картинки для каруселі", admin_image_footers_path)%>
+  <%= configurations_sidebar_menu_item("Головна сторінка карусель", admin_image_sliders_path)%>
 </ul>
