--- a/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
+++ b/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
@@ -26,6 +26,20 @@
   transform: scale(1);
   box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
+.existence {
+  color: #00336E;
+  padding-top: 0.5rem;
+  -webkit-animation: flicker 2s infinite;
+}
+@-webkit-keyframes flicker
+{
+0% {opacity:0;}
+9% {opacity:0;}
+10% {opacity:.5;}
+13% {opacity:0;}
+20% {opacity:.5;}
+25% {opacity:1;}
+}
 @media (max-width: 800px){
   .product_desc_hidden{
     font-size: 0.7rem;
