--- a/app/views/spree/admin/settings/change.html.erb
+++ b/app/views/spree/admin/settings/change.html.erb
@@ -48,7 +48,10 @@
   <span>Електронна скринька на яку приходять повідомлення про замовлення</span>
 <%=Spree::Config.email_admin%>
 </li>
-
+<li class="list-group-item">
+  <span>Телефон адміна</span>
+<%=Spree::Config.admin_phone%>
+</li>
 <li class="list-group-item">
   <span>Заголовок під картинками на головній сторінці</span>
 <%=Spree::Config.title_for_footer%>
