--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,12 +1,12 @@
 <% @body_id = "home" %>
 
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <a class="index_car_pointer" href="#carouselExampleControls" role="button" data-slide="prev">
+    <a class="index_car_pointer left_pointer" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="d-flex justify-content-center align-items-center carousel-icon-control-rounded index_car" aria-hidden="true">
       <%=image_tag("index_left.png")%>
     </span>
     </a>
-    <a class="right index_car_pointer" href="#carouselExampleControls" role="button" data-slide="next">
+    <a class="right right_pointer index_car_pointer" href="#carouselExampleControls" role="button" data-slide="next">
       <span class="d-flex justify-content-center align-items-center carousel-icon-control-rounded index_car" aria-hidden="true">
       <%=image_tag("index_right.png")%>
     </span>
