--- a/app/views/spree/admin/orders/index.html.erb
+++ b/app/views/spree/admin/orders/index.html.erb
@@ -67,13 +67,18 @@
         </td>
 
         <td class="no-wrap">
+          <%= order.bill_address.phone %>
           <% if order.user %>
             <%= link_to order.user.full_name, edit_admin_user_path(order.user) %>
           <% else %>
             <%= mail_to order.email %>
           <% end %>
         </td>
+        <% if order.line_items.map{|c|c.product.empty_price}.exclude?(true)%>
         <td><%= order.display_total.to_html %></td>
+        <%else%>
+        <td><%=Spree.t(:empty_price)%></td>
+        <%end%>
         <td class='actions actions-1' data-hook="admin_orders_index_row_actions">
           <%= link_to_edit_url edit_admin_order_path(order), title: "admin_edit_#{dom_id(order)}", no_text: true if can?(:edit, order) %>
         </td>
