--- a/app/views/spree/orders/_line_item_data.html.erb
+++ b/app/views/spree/orders/_line_item_data.html.erb
@@ -3,10 +3,15 @@
 <% elsif view == "desktop" %>
   <% additional_classes = "d-none d-lg-table-cell" %>
 <% end %>
-
+<%if line_item.product.empty_price%>
+<div class="shopping-cart-item-price <%= additional_classes %>" data-hook="cart_item_price">
+  <%= Spree.t(:empty_price) %>
+</div>
+<%else%>
 <div class="shopping-cart-item-price <%= additional_classes %>" data-hook="cart_item_price">
   <%= line_item.single_money.to_html %>
 </div>
+<%end%>
 <div class="shopping-cart-item-quantity <%= additional_classes %>" data-hook="cart_item_quantity">
   <div class="d-flex align-items-center">
     <%= button_tag '-', type: 'button', class: "border-right-0 shopping-cart-item-quantity-decrease-btn", data: { id: dom_id(line_item) } %>
@@ -16,9 +21,11 @@
 </div>
 
 <% if view == "desktop" %>
+<%if !line_item.product.empty_price%>
   <div class="shopping-cart-item-total d-none d-lg-table-cell" data-hook="cart_item_total">
     <%= line_item.display_amount.to_html unless line_item.quantity.nil? %>
   </div>
+  <%end%>
 <% end %>
 
 <div class="shopping-cart-item-delete <%= additional_classes %>" data-hook="cart_item_delete">
