--- a/app/views/spree/orders/edit.html.erb
+++ b/app/views/spree/orders/edit.html.erb
@@ -32,6 +32,7 @@
               <%= link_to Spree.t(:continue_shopping), spree.products_path, class: 'shopping-cart-buttons-continue' %>
             </div>
 
+            <% if @order.line_items.map{|c|c.product.empty_price}.exclude?(true)%>
             <div class="text-right shopping-cart-total d-none d-lg-block">
               <div class="row no-gutters align-items-center">
                 <div class="text-uppercase shopping-cart-total-text col-8 mr-0">
@@ -41,8 +42,8 @@
                   <%= order_form.object.display_item_total %>
                 </div>
               </div>
-
             </div>
+
 
               <div class="text-right shopping-cart-total d-lg-none">
               <div class="row no-gutters align-items-center">
@@ -64,6 +65,7 @@
                 </div>
               <% end %>
             </div>
+            <%end%>
 
             <div class="d-flex flex-column text-center shopping-cart-buttons" data-hook="cart_buttons">
               <%= link_to Spree.t('cart_page.checkout'), spree.checkout_path, class: 'btn index_btn text-uppercase font-weight-bold cart-checkout-btn shopping-cart-buttons-checkout', id: 'checkout-link', method: :get %>
